--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" href="photogrid.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<p>Undisclosed/Photogrid</p>
